refactor: Set<TechBlogPost>를 반환하게끔 수정